# coriolis

./: .env  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: auth.py  config.py  db_helper.py  security.py
app/crud/: user_crud.py
app/models/: close_market_order.py  market_order_create.py  trading_indexes.py  user.py
app/nado_client/: __init__.py  client.py  signing.py  utils.py
app/routers/: orders.py  users_router.py
app/schemas/: user.py
app/services/: batch_order_service.py  close_order_service.py  match_user_with_linksigner.py  place_market_order.py  user_service.py
