[project]
name = "coriolis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "black>=26.5.1",
    "cryptography>=48.0.0",
    "eth-account>=0.13.7",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "jwt>=1.4.0",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]

select = ["E", "F", "I", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
